--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
                     <!-- ==== PORTFOLIO 5 ===== -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/youme.png" alt="" class="portfolio__img">
+                        <img src="assets/img/youme.jpg" alt="" class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">YouMe</h3>
                             <p class="portfolio__description">YouMe is a chatApp for both Android and iOS users where they can chat, share images in high quality and many more</p>
