--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
 
                     <!--                     <br> -->
 
-                    <a href="mailto:sid.pa404@gmail.com,sidportfolio@outlook.com" target="_blank">
+                    <!-- <a href="mailto:sid.pa404@gmail.com,sidportfolio@outlook.com" target="_blank"> -->
                         <div class="contact__information">
 
                             <i class="uil uil-envelope contact__icon"></i>
@@ -798,7 +798,7 @@
                                 <span class="contact__subtitle">sidportfolio@outlook.com</span>
                             </div>
                         </div>
-                    </a>
+                    <!-- </a> -->
 
                     <!--                     <br> -->
 
