--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Dart language + kotlin</h3> <span
-                                        class="skills__number">70%</span>
+                                    <h3 class="skills__name">JavaScript </h3> <span
+                                        class="skills__number">30%</span>
                                 </div>
 
                                 <div class="skills__bar">
