--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hey, I'am S!ddhartha</h1>
                         <h3 class="home__subtitle">CSE-Student</h3>
-                        <p class="home_description">A driven and passionate individual currently in 3rd Year of B.Tech
+                        <p class="home_description">A driven and passionate individual currently in 4th Year of B.Tech
                             degree program. </p><br>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
@@ -166,12 +166,12 @@
 
                 <div class="about__data">
                     <p class="about__description">Hello everyone. Siddhartha here, Computer science student at VIT
-                        Vellore University, a driven and passionate individual currently in 3rd Year of B.Tech degree
+                        Vellore University, a driven and passionate individual currently in 4th Year of B.Tech degree
                         program. </p>
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">1
+                            <span class="about__info-title">2
                             </span>
                             <span class="about__info-name">Years <br> experience</span>
                         </div>
@@ -183,7 +183,7 @@
                         </div>
 
                         <div>
-                            <span class="about__info-title">3
+                            <span class="about__info-title">4
                             </span>
                             <span class="about__info-name">Internships <br> Worked</span>
                         </div>
@@ -604,7 +604,7 @@
                                 <span class="qualification__subtitle">Frontend</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2022 - 2022
+                                    2022 - Present
                                 </div>
                             </div>
                         </div>
@@ -794,8 +794,8 @@
 
                             <div>
                                 <h3 class="contact__title">Mail</h3>
-                                <span class="contact__subtitle">sidx404@gmail.com</span>
-                                <span class="contact__subtitle">sidportfolio@outlook.com</span>
+                                <span class="contact__subtitle">contact@siddharthapathak.com.np</span>
+<!--                                 <span class="contact__subtitle"></span> -->
                             </div>
                         </div>
                     <!-- </a> -->
