--- a/index.html
+++ b/index.html
@@ -877,9 +877,9 @@
                             class="uil uil-twitter-alt"></i>
                     </a>
 
-                    <a href="https://github.com/siddhartha1104" target="_blank" class="footer__social">
+<!--                     <a href="https://github.com/siddhartha1104" target="_blank" class="footer__social">
                         <i class="uil uil-github-alt"></i>
-                    </a>
+                    </a> -->
 
 
                     <a href="https://wa.me/+917080744391" target="_blank" class="footer__social">
