--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -40,15 +40,15 @@
       <nav id="colorlib-main-nav" role="navigation">
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
         <div class="js-fullheight colorlib-table">
-          <div class="img" style="background-image: url(https://media.licdn.com/dms/image/v2/D5603AQGk44uYODSrgQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1722535962645?e=1731542400&v=beta&t=zjFhHTNGTdZ-_fjPbutWIAnFI1q5kw8jpTIcOaVmN3g);"></div>
+          <div class="img" style="background-image: url(./images/about_dp.png);"></div>
           <div class="colorlib-table-cell js-fullheight">
             <div class="row no-gutters">
               <div class="col-md-12 text-center">
                 <h1 class="mb-4"><a href="index.html" class="logo">Sid</a></h1>
                 <ul>
-                  <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                  <li><a href="about.html"><span><small>02</small>About</span></a></li>
-                  <li class="active"><a href="blog.html"><span><small>03</small>Blog</span></a></li>
+                  <!-- <li><a href="index.html"><span><small>01</small>Home</span></a></li> -->
+                  <li><a href="index.html"><span><small>01</small>About</span></a></li>
+                  <li class="active"><a href="blog.html"><span><small>02</small>Blog</span></a></li>
                 </ul>
               </div>
             </div>
@@ -87,7 +87,7 @@
                     <li  class="ftco-animate"><a href="https://x.com/sidx404" target="_blank"><span class="icon-twitter"></span></a></li>
                     <li  class="ftco-animate"><a href="https://www.linkedin.com/in/siddharthapathak/" target="_blank"><span class="icon-linkedin"></span></a></li>
                     <li  class="ftco-animate"><a href="https://github.com/siddhartha1104" target="_blank"><span class="icon-github"></span></a></li>
-                    <!-- <li  class="ftco-animate"><a href="https://www.instagram.com/buggy.ea/" target="_blank"><span class="icon-instagram"></span></a></li> -->
+                    <li  class="ftco-animate"><a href="https://www.instagram.com/buggy.ea/" target="_blank"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
@@ -125,8 +125,6 @@
     <script src="js/scrollax.min.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/jquery.timepicker.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
     
   </body>
