--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <!-- <li><a href="https://www.instagram.com/buggy.ea/" target="_blank"><span class="icon-instagram"></span></a></li> -->
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="mailto:contact@siddharthapathak.com.np">contact@siddharthapathak.com.np</a></p>
+                  <p>Email: <a href="mailto:mail@siddharthapathak.com.np">mail@siddharthapathak.com.np</a></p>
                   <p>Alternative Email: <a href="mailto:sidx404@gmail.com">sidx404@gmail.com</a></p>
                 </div>
               </div>
