--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:mail@siddharthapathak.com.np">mail@siddharthapathak.com.np</a></p>
-                  <p>Alternative Email: <a href="mailto:sidx404@gmail.com">sidx404@gmail.com</a></p>
+                  <p>Alternative Email: <a href="mailto:sid.me404@gmail.com">sid.me404@gmail.com</a></p>
                 </div>
               </div>
             </div>
